Actualizar script y agregar sitio de docs
Pendiente de publicacion via gh-pages por ahora.

--- a/src/conicet/conicet.csproj
+++ b/src/conicet/conicet.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="$(DotNetVersion)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="$(DotNetVersion)" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="$(DotNetVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="$(DotNetVersion)" />
     <PackageReference Include="Polly" Version="8.0.0-beta.2" />
     <PackageReference Include="SharpYaml" Version="2.1.0" />
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
