--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -22,6 +22,7 @@
     <RollForward>LatestMinor</RollForward>
 
     <VersionPrefix Condition="$(VersionPrefix) == ''">42.42.42</VersionPrefix>
+    <PackageOutputPath Condition="'$(PackageOutputPath)' == ''">$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)..\bin'))</PackageOutputPath>
   </PropertyGroup>
 
   <PropertyGroup Label="Version" Condition="$(VersionLabel) != ''">
