--- a/src/conicet/Properties/launchSettings.json
+++ b/src/conicet/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "conicet": {
       "commandName": "Project",
-      "commandLineArgs": "scrap"
+      "commandLineArgs": ""
     }
   }
 }
