--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'github-pages', '~> 228', group: :jekyll_plugins
+gem 'jekyll', '~> 4.3', '>= 4.3.2'
+gem 'tomlrb', '~> 2.0', '>= 2.0.3'
 gem 'wdm', '>= 0.1.0' if Gem.win_platform?
 gem 'webrick', '~> 1.8'
