--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,7 @@ jobs:
       - name: ⚙ jekyll
         working-directory: docs
         run: |
-          sudo gem install bundler
+          gem install bundler
           bundle install
 
       - name: 🙏 build
