--- a/docs/_config.toml
+++ b/docs/_config.toml
@@ -7,7 +7,7 @@ css = [
   "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css",
   "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css",
   "https://rawgit.com/vitmalina/w2ui/master/dist/w2ui.min.css",
-  "/assets/css/site.css",
+  "assets/css/site.css",
 ]
 
 js = [
