Arreglar problema con url relativas

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: 🙏 build
         working-directory: docs
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --baseurl /conicet
 
       - name: ⤴️ upload
         uses: actions/upload-pages-artifact@v2
