Subir la CLI tool a un feed para instalacion
Agregar suffix Command a todos los commandos, y agregar soporte para scrapear/indexar todas las areas.

--- a/src/conicet/Properties/launchSettings.json
+++ b/src/conicet/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "conicet": {
       "commandName": "Project",
-      "commandLineArgs": ""
+      "commandLineArgs": "populate"
     }
   }
 }
