--- a/src/conicet/conicet.csproj
+++ b/src/conicet/conicet.csproj
@@ -11,7 +11,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\empty.db" Link="empty.db" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.8" />
+    <PackageReference Include="Dapper" Version="2.1.4" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="$(DotNetVersion)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="$(DotNetVersion)" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="$(DotNetVersion)" />
