--- a/docs/_config.toml
+++ b/docs/_config.toml
@@ -2,6 +2,7 @@ livereload = true
 gtag = "G-JV5VKJ05H4"
 title = "Menos Relato"
 favicon = "/assets/img/favicon.ico"
+storage = 'https://menosrelato.blob.core.windows.net'
 
 css = [
   "https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css",
